# zero-latency-yolo

./: .env  .gitignore  CMakeLists.txt  README.md  build.sh  build_client.sh  build_server.sh  deploy.sh  deploy_backend.sh  generate_model.sh  install_python_deps.sh  quick_fix.sh  regenerate_model.sh  setup.sh  setup_environment.sh  start.sh  start_server.sh  start_web.sh  test_model.sh  verify_onnx_setup.sh  yolo_fps_assist.service  yolo_fps_web.service
cmake/: windows-toolchain.cmake
configs/: client.json  client.json.example  server.json  server.json.example
downloads/zero-latency-client/: README.txt  start.bat
include/: cpu_provider_factory.h  onnxruntime_c_api.h  onnxruntime_cxx_api.h  onnxruntime_cxx_inline.h  onnxruntime_run_options_config_keys.h  onnxruntime_session_options_config_keys.h  onnxruntime_training_c_api.h  onnxruntime_training_cxx_api.h  onnxruntime_training_cxx_inline.h  provider_options.h
models/: README.md
scripts/: client_update.sh  convert_model.py  generate_dummy_model.py  generate_dummy_model.py.bak  install_deps.sh  optimize_server.sh  setup_environment.sh  setup_service.sh
src/client/: CMakeLists.txt  config.cpp  config.h  dual_engine.cpp  dual_engine.h  input_control.cpp  input_control.h  main.cpp  network.cpp  network.h  prediction_engine.cpp  prediction_engine.h  renderer.cpp  renderer.h  screen_capture.cpp  screen_capture.h  stb_image.h  stb_image_write.h  win32_utils.cpp  win32_utils.h
src/common/: concurrent_queue.h  constants.h  event_bus.h  logger.h  memory_pool.h  protocol.h  result.h  types.h
src/game/: game_adapter.h  game_adapter_impl.h  kalman_tracker.cpp  kalman_tracker.h
src/game/base/: game_adapter_base.h  game_adapter_manager.h
src/game/games/cs16/: cs16_game_adapter.cpp  cs16_game_adapter.h
src/game/games/csgo/: csgo_game_adapter.cpp  csgo_game_adapter.h
src/inference/: inference_engine.h  onnx_engine.cpp  onnx_engine.h
src/network/: network_server.cpp  network_server.h  reliable_udp.cpp  reliable_udp.h
src/server/: CMakeLists.txt  config.cpp  config.h  game_adapter.cpp  game_adapter.h  main.cpp  network.cpp  network.h  yolo_engine.cpp  yolo_engine.cpp.bak  yolo_engine.h  yolo_engine.h.bak
src/web/: package.json  server.js
src/web/public/: index.html  script.js  styles.css
